fix(): handle the exceptions
- for "fun", use vavr everywhere...